syntax = "proto3";

package exchanger;

option go_package = "exchanger/api;api";

service ExchangeService {
  rpc GetRates (GetRatesRequest) returns (GetRatesResponse);
}

message GetRatesRequest {}

message GetRatesResponse {
  map<string, float> rates = 1; // USD, EUR, RUB
}
