syntax = "proto3";

package exchanger;

option go_package = "/api;api";

service ExchangerService {
  rpc GetRates (Empty) returns (RatesResponse);
}

message Empty {}

message RatesResponse {
  map<string, double> rates = 1;
}